--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                     <div class = "answers third" ></div>
                     <div class = "answers fourth"></div>
                     
-                    <div class = "result result-title" ></div>
-                    <div class = "result second-result"></div>
-                    <div class = "result third-result" ></div>
-                    <div class = "result fourth-result"></div>
+                    <div class = "results result-title" ></div>
+                    <div class = "results second-result"></div>
+                    <div class = "results third-result" ></div>
+                    <div class = "results fourth-result"></div>
                 </div>
                 
                 <div class = "image-holder"></div>
